[project]
name = "its-bayesian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.23.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pymc>=5.26.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
