[project]
name = "its-bayesian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.23.4",
    "fastprogress>=1.1.3",
    "ipywidgets>=8.1.8",
    "jax>=0.9.0.1",
    "jaxlib>=0.9.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "numpyro>=0.20.0",
    "nutpie>=0.16.5",
    "pandas>=3.0.0",
    "pymc>=5.26.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]
